--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+.fr{
+  float: right;
+}
+
+.cursor-pointer{
+  cursor: pointer;
+}
+
+.w-25{
+  width: 25%;
+}
