--- a/src/app/courses/course-details/course-details.component.scss
+++ b/src/app/courses/course-details/course-details.component.scss
@@ -21,3 +21,12 @@
   color: white;
   width: 15%;
 }
+
+.search{
+  display: inline-flex;
+  width: -webkit-fill-available;
+}
+
+.margin-right{
+  margin-right: 10px;
+}
